--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <!--link nang CSS-->
-    <link rel="stylesheet" href="C:\Users\LANZ\Desktop\samplenav\css\style.css">
+    <link rel="stylesheet" href="css\style.css">
     <script src="https://kit.fontawesome.com/84cb06d195.js" crossorigin="anonymous"></script>
     <title> CWD &copy; Training;</title>
 
